<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/midnightblue"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/agendamento"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/midnightblue"
            android:ems="10"
            android:hint="@string/hint_et_1"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="#B0BEC5"
            android:autofillHints="name" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/et_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/midnightblue"
            android:ems="10"
            android:hint="@string/hint_et_2"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#B0BEC5"
            app:mask="(__) _____-____"
            app:maskCharacter="_"
            app:maskStyle="normal" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:cardBackgroundColor="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <DatePicker
            android:id="@+id/dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:cardBackgroundColor="@color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <TimePicker
            android:id="@+id/tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:imeOptions="actionNext"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="50dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt_consultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="abrir_tela_consultar"
                android:text="@string/consultar"
                tools:ignore="UsingOnClickInXml" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="finalizar_agendar"
                android:text="@string/voltar"
                tools:ignore="UsingOnClickInXml" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bt_agendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="inserirRegistro"
                android:text="@string/agendar"
                tools:ignore="UsingOnClickInXml" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>